src/coolcmp/unit_tests/Custom/type_checker/success/self2.cl
class Main {
    obj : SELF_TYPE <- new SELF_TYPE;

    main(): Int {1};
};